--- a/pytest.ini
+++ b/pytest.ini
@@ -6,5 +6,6 @@ python_functions = test_*
 
 markers =
     users: Маркировка для тестов, связанных с пользователями.
+    files: Маркировка для тестов, связанных с файлами.
     regression: Маркировка для регрессионных тестов.
     authentication: Маркировака для запуска тестов на аутентификацию.
