--- a/pytest.ini
+++ b/pytest.ini
@@ -7,5 +7,6 @@ python_functions = test_*
 markers =
     users: Маркировка для тестов, связанных с пользователями.
     files: Маркировка для тестов, связанных с файлами.
+    courses: Маркировка для тестов, связанных с курсами.
     regression: Маркировка для регрессионных тестов.
     authentication: Маркировака для запуска тестов на аутентификацию.
