Практика написания API автотестов для работы с заданиями.Создание задания

--- a/pytest.ini
+++ b/pytest.ini
@@ -8,5 +8,6 @@ markers =
     users: Маркировка для тестов, связанных с пользователями.
     files: Маркировка для тестов, связанных с файлами.
     courses: Маркировка для тестов, связанных с курсами.
+    exercises: Маркировка для тестов, связанных с задниями.
     regression: Маркировка для регрессионных тестов.
     authentication: Маркировака для запуска тестов на аутентификацию.
